# cursor-controlplane

./: .env.example  .gitignore  COMMIT_MSG.txt  README.md  config.yaml  cursor-controlplane.spec  package-lock.json  package.json  pyproject.toml  requirements-build.txt  requirements.txt  run.py  vitest.config.js
.cursor/rules/: release-version-sync.mdc
.github/workflows/: ci.yml  release.yml
control_plane/: __init__.py  acp_client.py  acp_model_probe.py  agent_models.py  agent_resolve.py  app.py  cli.py  config.py  constants.py  db.py  events.py  github_cli.py  model_cli.py  models.py  paths.py  repo_picker.py  service_control.py  session_manager.py  setup_wizard.py  state.py  telegram_format.py  workspace_paths.py
control_plane/api/: routes.py
control_plane/channels/: __init__.py  base.py  registry.py  telegram_channel.py  web_channel.py
control_plane/static/: app.js  dashboard-utils.js  index.html  style.css
docs/: ARCHITECTURE.md
scripts/: install.ps1  install.sh  purge_all_sessions_db.py  uninstall.ps1  uninstall.sh
tests/: conftest.py  test_api.py  test_db.py  test_model_cli.py  test_session_text.py  test_setup_wizard.py
tests/client/: dashboard-utils.test.js
